# FaceEngine-Server-SDK

./: .gitattributes  README.md
examples/faceengine_test_c/: .CMakeLists.txt.swo  CMakeLists.txt  faceengine.h  main.cpp
examples/faceengine_test_java/com/xcaan/test/: TestEngine.java
